--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
 <body class="container justify-content-center align-items-center">
   <main class="container-fluid">
-    <div class="row mt-4"></div>
+    <div class="row mt-5"></div>
     <div class="row justify-content-center mt-5">
       <div class="col-lg-3"></div>
-      <div class="col-lg-4 col-sm-12 ">
-        <div class="card rounded-3 cardShadow">
+      <div class="col-lg-6 col-sm-12">
+        <div class="card rounded-3 cardShadow" style="max-width:385px;">
           <div class="card-header border-0 bg-light">
             <img class="card-img-top" src=".\assets\images\illustration-article.svg" alt="">
           </div>
@@ -51,7 +51,7 @@
               <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
               </li>
             </ul>
-            <div class="row cardFooter">
+            <div class="row cardFooter justify-content-center">
               <div class="col-3">
                 <img class="img-fluid" src=".\assets\images\image-avatar.webp" alt="">
               </div>
@@ -62,10 +62,10 @@
           </div>
         </div>
       </div>
-    <div class="col-lg-3"></div>
+      <div class="col-lg-3"></div>
     </div>
   </main>
-  <footer class="attribution mt-3">
+  <footer class=" row attribution mt-3 justify-content-center">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Amit Eyaly</a>.
   </footer>
