--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <div class="row justify-content-center mt-5">
       <div class="col-lg-3"></div>
       <div class="col-lg-6 col-sm-12">
-        <div class="card rounded-3 cardShadow" style="max-width:385px;">
+        <div class="card rounded-3 cardShadow" id="cardstructure">
           <div class="card-header border-0 bg-light">
             <img class="card-img-top" src=".\assets\images\illustration-article.svg" alt="">
           </div>
           <div class="card-body ml-3 justify-content-start">
             <ul class="list-group list-group-flush">
               <li class="list-group-item border-0">
-              <button class="btn " style="background-color:#F4D04E;">Learning</button>
+              <button class="btn" type="button" style="background-color:#F4D04E;">Learning</button>
               </li>
               <li class="list-group-item border-0 p-0">
               <span>Published 21 Dec 2023</span>
